fix qedit align center

--- a/httpdocs/admin/css/panel.css
+++ b/httpdocs/admin/css/panel.css
@@ -25,10 +25,12 @@ table.tablelist tr:nth-child(2n) td{
 }
 
 table.tablelist tr.marked td{background-color:#E4CCE3;padding:5px;}
-table.tablelist tr td label{color:black;width:100%;height:100%;display:inline-table;}
+table.tablelist tr td{text-align:center;}
+table.tablelist tr.header td, table.tablelist tr td p{text-align:left;}
+table.tablelist tr td label{color:black;width:100%;min-height:18px; display: block; vertical-align: middle; background:none !important; text-align:center; cursor:text;}
 table.tablelist tr td div{color:black;background-color:inherit!important;}
-table.tablelist tr td label input{width:100%;height:100%;background-color:#ffffaa;color:black;}
-table.tablelist tr td label select{width:100%;height:100%;background-color:#ffffaa;color:black;}
+table.tablelist tr td label input{width:90%;height:21px%;color:black;margin:0px 4px 0px 4px; text-align:center;background:#ffffff !important; font-size: 12px;}
+table.tablelist tr td label select{width:90%;height:21px%;color:black;margin:0px 4px 0px 4px; text-align:center;background:#ffffff !important; font-size: 12px;}
 .treeselect{background-color:#ccd6e4;padding:5px;}
 .treenoselect{background-color:none;padding:5px;}
 .button16,.qview,.lchb{width:16px;height:16px;margin:0;}
@@ -304,5 +306,5 @@ dd {
     .button16 .link_to a{
         background-image: url('/admin/img/icons/menu/buttom.link_to.png');
     }
-    
+
 #auth_raptor {width: 20%; position: absolute; bottom: 0px; right:0px;}
